k8s/aws-uat/namespaces-aws-uat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atoloan-backend-uat
---
apiVersion: v1
kind: Namespace
metadata:
  name: atoloan-frontend-uat
